--- a/partials/_team.html
+++ b/partials/_team.html
@@ -1,64 +1,37 @@
 <!-- Team -->
-    <!-- <section class="bg-light" id="team">
+    <section class="bg-light" id="team">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">Meet the <span class="highlighted">team</span></h2>
-            <h3 class="section-subheading text-muted">Because it's always better together</h3>
+            <h2 class="section-heading" data-i18n="[html]team.title"></h2>
+            <h3 class="section-subheading text-muted" data-i18n="team.subtitle"></h3>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/thomas.jpg" alt="">
-              <h4>Thomas Vanderstraeten</h4>
-              <p class="text-muted">Runner & Coder</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
+              <img class="mx-auto rounded-circle" src="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/students.png" alt="">
+              <h4 data-i18n="team.item_1.name"></h4>
+              <br>
+              <p class="text-muted" data-i18n="team.item_1.description"></p>
             </div>
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/anon.jpg" alt="">
-              <h4>XXX YYY</h4>
-              <p class="text-muted">Tech mentor</p>
-              <ul class="list-inline social-buttons">
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="#">
-                    <i class="fa fa-linkedin"></i>
-                  </a>
-                </li>
-              </ul>
+              <img class="mx-auto rounded-circle" src="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/thom.png" alt="">
+              <h4 data-i18n="team.item_2.name"></h4>
+              <br>
+              <p class="text-muted" data-i18n="[html]team.item_2.description"></p>
             </div>
           </div>
           <div class="col-sm-4">
-
+            <div class="team-member">
+              <img class="mx-auto rounded-circle" src="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/staff.png" alt="">
+              <h4 data-i18n="team.item_3.name"></h4>
+              <br>
+              <p class="text-muted" data-i18n="team.item_3.description"></p>
+            </div>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
