Publish live version

--- a/partials/_i18n.html
+++ b/partials/_i18n.html
@@ -23,7 +23,7 @@
                 cta: 'Découvrir'
               },
               flash: {
-                text: "La collecte a démarré ! <u><a style='font-weight: bold; color: white;' target='_blank' href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>Inscrivez-vous ici</a></u> pour donner des Ethers ou courir avec Thomas!"
+                text: "Le <u><a style='font-weight: bold; color: white;' target='_blank' href='https://etherscan.io/address/0x7ad38438b15338f6d1846961903055ada6fff054'>smart contract</a></u> est déployé ! <u><a style='font-weight: bold; color: white;' target='_blank' href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>Inscrivez-vous ici</a></u> pour donner des Ethers ou courir avec Thomas."
               },
               discover: {
                 title: "Un <span class='highlighted'>challenge</span> excitant",
@@ -136,7 +136,7 @@
                 cta: 'Discover'
               },
               flash: {
-                text: "The fundraising is live! <u><a style='font-weight: bold; color: white;' target='_blank' href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>Click here</a></u> to contribute or run with Thomas!"
+                text: "The fundraising is live: <u><a style='font-weight: bold; color: white;' target='_blank' href='https://etherscan.io/address/0x7ad38438b15338f6d1846961903055ada6fff054'>see the smart contract</a></u>! <u><a style='font-weight: bold; color: white;' target='_blank' href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>Click here</a></u> to contribute or run with Thomas!"
               },
               discover: {
                 title: "An exciting <span class='highlighted'>challenge</span>",
