--- a/partials/_navbar.html
+++ b/partials/_navbar.html
@@ -12,19 +12,16 @@
           <a class="nav-link js-scroll-trigger" href="#discover" data-i18n="navbar.discover"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#portfolio" data-i18n="navbar.be_code"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#challenge" data-i18n="navbar.challenge"></a>
-        </li>
-        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#support" data-i18n="navbar.support"></a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#team" data-i18n="navbar.team"></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#" data-i18n="navbar.press"></a>
+          <a class="nav-link js-scroll-trigger" href="#track" data-i18n="navbar.track"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" target="_blank" href="https://s3.eu-central-1.amazonaws.com/cryptorun.brussels/Communique%CC%81+de+presse+-+Challenge+Cryptorun.pdf" data-i18n="navbar.press"></a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" target="_blank" href="https://medium.com/@vanderstraeten.thomas" data-i18n="navbar.blog"></a>
