--- a/partials/_i18n.html
+++ b/partials/_i18n.html
@@ -117,7 +117,7 @@
               track: {
                 title: "Découvrez le <span class='highlighted'>grand méchant parcours</span>",
                 subtitle: "60km de sueur et de bonheur autour de Bruxelles",
-                description: "<ul><li><b>Départ à 10h</b> du matin le dimanche 20 mai à la Passerelle de Tervueren</li><li>Le <b>parcours</B> suivra la belle <a href='http://environnement.brussels/thematiques/espaces-verts-et-biodiversite/la-promenade-verte'>Promenade Verte</a> autour de Bruxelles<li><b>Vitesse</b> espérée: ~10km/h (diminuant au fil de la course)</li><li><b>Rejoignez Thomas</b> pour quelques kilomètres: inscription <a href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>ici</a> (pas obligatoire, mais apprécié ;) ). Les temps de passage intermédiaires sont renseignés sur la carte Gmaps - il vous suffira de rejoindre l'équipe lors de son passage</li><li><b>Arrivée espérée</b> entre 16h et 17h30 au Parc de Bruxelles</li></ul>"
+                description: "<ul><li><b>Départ à 10h</b> du matin le dimanche 20 mai à la Passerelle de Tervueren</li><li>Le <b>parcours</B> suivra la belle <a href='http://environnement.brussels/thematiques/espaces-verts-et-biodiversite/la-promenade-verte'>Promenade Verte</a> autour de Bruxelles<li><b>Vitesse</b> espérée: ~10km/h (diminuant au fil de la course)</li><li><b>Rejoignez Thomas</b> pour quelques kilomètres: inscription <a href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>ici</a> (pas obligatoire, mais apprécié ;) ). Les temps de passage intermédiaires sont renseignés sur la carte Gmaps - il vous suffira de rejoindre l'équipe lors de son passage</li><li><b>Arrivée espérée</b> entre 16h30 et 18h au Parc de Bruxelles</li></ul>"
               }
             }
           },
@@ -234,7 +234,7 @@
               track: {
                 title: "Discover the <span class='highlighted'>beasty track</span>",
                 subtitle: "60KM of sweat and pleasure around Brussels",
-                description: "<ul><li><b>Start at 10AM</b> on the 20th of May on the Tervueren Bridge</li><li>The <b>track</B> will follow the <a href='http://environnement.brussels/thematiques/espaces-verts-et-biodiversite/la-promenade-verte'>Green Belt</a> around Brussels<li><b>Expected speed</b>: ~10km/h (slowing down along the way)</li><li><b>Join Thomas</b> for a few kils: register <a href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>here</a> (not mandatory, but appreciated ;) ). Approximate intermediary times are shown on the Gmaps map - just join the team as we run along</li><li><b>Expected finish</b> between 4PM and 5:30PM at Brussels Park</li></ul>"
+                description: "<ul><li><b>Start at 10AM</b> on the 20th of May on the Tervueren Bridge</li><li>The <b>track</B> will follow the <a href='http://environnement.brussels/thematiques/espaces-verts-et-biodiversite/la-promenade-verte'>Green Belt</a> around Brussels<li><b>Expected speed</b>: ~10km/h (slowing down along the way)</li><li><b>Join Thomas</b> for a few kils: register <a href='https://eightytwentylab.typeform.com/to/Nyv2Vf'>here</a> (not mandatory, but appreciated ;) ). Approximate intermediary times are shown on the Gmaps map - just join the team as we run along</li><li><b>Expected finish</b> between 4:30PM and 6PM at Brussels Park</li></ul>"
               }
             }
           }
