Update flash header

--- a/partials/_i18n.html
+++ b/partials/_i18n.html
@@ -139,7 +139,7 @@
                 cta: 'Discover'
               },
               flash: {
-                text: "The challenge was successfully accomplished! Thomas ran 65KM in total and 1.85 ETH were collected. A huge thanks to all that made this possible!"
+                text: "Challenge accomplished! Thomas ran 65KM and 1.85 ETH were collected. A huge thanks to all that made this possible!"
               },
               discover: {
                 title: "An exciting <span class='highlighted'>challenge</span>",
